@@ -1,3 +1,8 @@
+Changes for Linux and Windows version 2.0.7
+--------------------------------------------------------------------
+
+- Fixed the proxy support for the download manager
+
 Changes for Linux and Windows version 2.0.6
 --------------------------------------------------------------------
 
